tests/error/inout_errors/struct_constructor.err
Error: Not owned (at $FILE:11:20)
   | 
 9 | @guppy
10 | def test(q: qubit) -> MyStruct:
11 |     return MyStruct(q)
   |                     ^ Function `__new__` wants to take ownership of this argument,
   |                       but `test` doesn't own `q`
   | 
10 | def test(q: qubit) -> MyStruct:
   |          -------- Argument `q` is only borrowed. Consider taking ownership:
   |                   `q: qubit @owned`

Guppy compilation failed due to 1 previous error
